feat: footer WIP

--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,7 @@
                         Компания «Пиксель Плюс» существует более 6 лет, за это время мы принимали участие в разработке более чем 700 сайтов, поэтому можем уверенно называть себя профессионалами. На данный момент наш коллектив состоит из более чем 30 сотрудников работающих в двух офисах в Москве и Зеленограде.характерные для этого жанра мотивы: неразделённой любви, ухода молодости, угасания души. 
                      </p>
                      <p class="catalog__text-paragraph">
-                        Компания «Пиксель Плюс» существует более 6 лет, за это время мы принимали участие в разработке более чем 700 сайтов, поэтому можем уверенно называть себя профессионалами. На данный момент наш коллектив состоит из более чем 30 сотрудников работающих в двух офисах в Москве и Зеленограде.характерные для этого жанра мотивы: неразделённой любви, ухода молодости, угасания души. 
+                        Одним из основных направлений работ нашей компании является поисковое продвижение сайтов, на данной момент мы работаем с более чем 150 постоянными клиентами по более чем 11 000 поисковым запросам. При этом в работе основной акцент мы делаем на качестве работ, а так же применяем собственные уникальные разработки в области SEO продвижения. На данный момент отдел SEO состоит из 9 человек под руководством ведущего специалиста, преимущественно работающих в нашем московском офисе.
                      </p>
                   </div>
                </div>
@@ -177,7 +177,7 @@
       <footer class="page-footer">
          <div class="wrapper page-footer__wrapper">
             <div class="page-footer__copyright">
-               <p class="page-main__paragraph">© 2012–2013 ЗАО «Компания»</p>
+               <p class="page-footer__paragraph">© 2012–2013 ЗАО «Компания»</p>
                <a class="page-footer__email" href="mailto:info@name.ru">info@name.ru</a>
             </div>
             <ul class="page-footer__nav">
@@ -188,7 +188,7 @@
                <li class="page-footer__nav-item"><a class="page-footer__link" href="#">Контакты</a></li>
             </ul>
             <div class="page-footer__dev">
-               <p class="page-main__paragraph page-main__paragraph--dev">Разработка сайта — 
+               <p class="page-footer__paragraph page-footer__paragraph--dev">Разработка сайта — 
                   компания «Пиксель Плюс»</p>
             </div>
          </div>
