--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <header class="page-header">
          <div class="wrapper page-header__wrapper">
             <div class="page-header__logo">
-               <img class="logo" src="img/logo.png" alt="Название компании логотип">
+               <img class="logo" src="img/logo.png" alt="Название компании логотип" width="273" height="100">
             </div>
             <ul class="page-header__contacts page-header__contacts-list">
                <li class="page-header__contacts-item"><a class="page-header__contacts-link page-header__contacts-tel" href="tel:+74997777777">+7(499) 777-77-77</a></li>
