--- a/src/index.html
+++ b/src/index.html
@@ -148,39 +148,37 @@
             </div>
          </section>
       </main>
-
       <section class="modal modal-popup" id="hidden-content" style="display: none;">
          <button class="modal__close" type="button" onclick="$.fancybox.close(); return false;">Закрыть</button>
          <h2 class="modal__title">Обратная связь</h2>
          <form class="modal__form" action="#" method="post">
-             <fieldset class="modal__form-fieldset" style="border: 0;">
-                 <div class="modal__form-wrapper">
-                    <label for="userName">Ваше имя *</label>
-                    <input class="modal__input" id="userName" type="text" name="user-name">
-                 </div>
-             </fieldset>
-             <fieldset class="modal__form-fieldset" style="border: 0;">
+            <fieldset class="modal__form-fieldset" style="border: 0;">
+               <div class="modal__form-wrapper">
+                  <label for="userName">Ваше имя *</label>
+                  <input class="modal__input" id="userName" type="text" name="user-name">
+               </div>
+            </fieldset>
+            <fieldset class="modal__form-fieldset" style="border: 0;">
                <div class="modal__form-wrapper">
                   <label for="userPhoneNumber">Телефон *</label>
                   <input class="modal__input" id="userPhoneNumber" type="tel" name="user-phone">
                </div>
-             </fieldset>
-             <fieldset class="modal__form-fieldset" style="border: 0;">
+            </fieldset>
+            <fieldset class="modal__form-fieldset" style="border: 0;">
                <div class="modal__form-wrapper">
                   <label for="userEmail">Email *</label>
                   <input class="modal__input modal__input--incorrect" id="userEmail" type="email" name="email" value="Поле обязательно для заполнения">
                </div>
-             </fieldset>
-             <fieldset class="modal__form-fieldset" style="border: 0;">
+            </fieldset>
+            <fieldset class="modal__form-fieldset" style="border: 0;">
                <div class="modal__form-wrapper">
                   <label for="userMessage">Сообщение</label>
                   <textarea class="modal__textarea" id="userMessage" name="msg" rows="8">
                </div>
-             </fieldset>
-             <button class="modal__form-button" type="submit">Отправить</button>
+            </fieldset>
+            <button class="modal__form-button" type="submit">Отправить</button>
          </form>
       </section>
-
       <footer class="page-footer">
          <div class="wrapper page-footer__wrapper">
             <div class="page-footer__copyright">
@@ -196,7 +194,8 @@
             </ul>
             <div class="page-footer__dev">
                <p class="page-footer__paragraph page-footer__paragraph--dev"><span>Разработка сайта</span> — 
-                  компания «Пиксель Плюс»</p>
+                  компания «Пиксель Плюс»
+               </p>
             </div>
          </div>
       </footer>
